# neovim

./: .clang-format  .gdbinit  .gitattributes  .gitignore  .gitigonre  .tmux.conf  .vim-bookmarks  48_opt.c  README.md  coc-settings.json  coc_init.vim  ginit.vim  icon.md  init.vim  keymap.md  lazy-lock.json  old.vim  tags
font/Window terminal fonts/FiraMono NF/: README.txt
lua/: autocmd.lua  autocmd.vim  avante_cfg.lua  basic.lua  coc_init.lua  common_func.lua  dap_config.lua  dap_cpp.lua  init.lua  keymap.md  keymap_help.lua  keymaps.lua  lsp_config.lua  luasnip_cfg.lua  nv_utils.lua  plugins.lua  plugins_cfg.lua  projects_template.lua  tags
lua/config/: .vim-bookmarks  avante_cfg.lua  basic_cfg.lua  codecomp.lua  codecomp_cfg.lua  compiles.lua  compiles_cfg.lua  dap.lua  dap_cfg.lua  lsp.lua  lsp_cfg.lua  luasnip.lua  luasnip_cfg.lua  plugins.lua  plugins_cfg.lua
lua/config/codecomp/: adapters.lua  extensions.lua
lua/config/codecomp/mcp/: base.lua
lua/config/codecomp/prompt_library/: base.lua  commit_message.lua
lua/config/codecomp/prompt_library/markdown/: project_map.md
lua/config/codecomp/rules/: base.lua  help.md
lua/config/codecomp/rules/analysis/: base.md
lua/config/codecomp/rules/bigfile/: base.md
lua/config/codecomp/rules/memory/: base.md
lua/config/codecomp/rules/project_analysis/: base.md
lua/config/codecomp/rules/project_big/: base.md
lua/config/codecomp/rules/python/: base.md
lua/config/codecomp/tools/: calculator.lua  cmd_runner.lua  run_command.lua
nvim/: autocmd.vim  coc-settings.json  coc_init.vim  init.vim  init.vim.bak  plugins_init.vim
nvim/lua/: autocmd.lua  autocmd.vim  basic.lua  coc_init.lua  coc_init.vim  init.lua  init.sh  keymaps.lua  plugins.lua  plugins_init.vim
nvim/plugin/: packer_compiled.lua
plugin/: packer_compiled.lua
project_templates/C&CPP/c/: CMakeLists.txt  main.c
project_templates/C&CPP/cpp/: CMakeLists.txt  main.cpp
project_templates/C-Cpp/c_common/: CMakeLists.txt
project_templates/C-Cpp/c_console_exe/: CMakeLists.txt
project_templates/C-Cpp/c_dynamic_dll/: CMakeLists.txt
project_templates/C-Cpp/c_static_lib/: CMakeLists.txt  dllmain.c
project_templates/C-Cpp/c_window_exe/: CMakeLists.txt  winmain.c
project_templates/C-Cpp/cpp_common/: CMakeLists.txt
project_templates/C-Cpp/cpp_console_exe/: CMakeLists.txt
project_templates/C-Cpp/cpp_dynamic_dll/: CMakeLists.txt
project_templates/C-Cpp/cpp_static_lib/: CMakeLists.txt
project_templates/C-Cpp/cpp_window_exe/: CMakeLists.txt
project_templates/Qt/Qt6_Qml_x64/: CMakeLists.txt  example.qrc
project_templates/Qt/Qt6_Qml_x64/cmake/: QtCommon.cmake
project_templates/Qt/Qt6_Qml_x64/qml/: main.qml
project_templates/Qt/Qt6_Qml_x64/src/: main.cpp
project_templates/Qt/Qt6_x64/: CMakeLists.txt
project_templates/Qt/Qt6_x64/src/: mainwindow.h
project_templates/Qt/Qt6_x64_dll/: CMakeLists.txt  README_DLL.md
project_templates/Qt/Qt6_x64_dll/cmake/: QtCommon.cmake
project_templates/Qt/Qt6_x64_dll/src/: example_export.h  main.cpp  mainwindow.h
project_templates/Qt/Qt6_x64_dll/test/: CMakeLists.txt  test_dll.cpp
terminal/: .p10k.zsh  .tmux.conf  .zshrc
ultisnips/: c.snippets  cpp.snippets
undodir/: %home%yuan%.config%lua%init.lua  %home%yuan%.config%lua%plugins.lua  %home%yuan%.config%lua%user%plugins.lua  %home%yuan%.config%nvim%init.vim  %home%yuan%.config%nvim%lua%autocmd.lua  %home%yuan%.config%nvim%lua%autocmd.vim  %home%yuan%.config%nvim%lua%basic.lua  %home%yuan%.config%nvim%lua%coc_init.vim  %home%yuan%.config%nvim%lua%init.lua  %home%yuan%.config%nvim%lua%init.sh  %home%yuan%.config%nvim%lua%keymaps.lua  %home%yuan%.config%nvim%lua%old.vim  %home%yuan%.config%nvim%lua%plugins.lua  %home%yuan%.config%nvim%lua%plugins_init.vim  %mnt%d%work%00000000-算法合集%JacCollect_From-DTS - 副本%remote_socket_zdyb.py  %mnt%d%work%20211220-weichai_接口V4%src%main_512.py
vim/: autocmd.vim  plugins_init.vim
